test/typeerrors/ex2.golden
Building file ../test/typeerrors/ex2.act
  Compiling ex2.act for release

ERROR: Error when compiling ex2 module: Type error

  |
4 |a = f(3,4,5)
  |    ^^^^^^^^


  |
1 |def f(x,y):
  |    ^
Type incompatibility between definition of and call of f (too many arguments in call)
f is inferred to have a type of the form [A(Plus)] => _(A, A) -> A

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

